# LeddarSDK

./: .clang-format  .gitignore  LICENSE  README.md
libs/BCM2835/: README
libs/BCM2835/src/: bcm2835.c  bcm2835.h
libs/Komodo/: komodo.c  komodo.h
libs/RapidJson/rapidjson/: rapidjson.h
libs/libmodbus/src/: modbus-LT.c  modbus-LT.h  modbus-data.c  modbus-private.h  modbus-tcp.c  modbus.c  modbus.h
libs/libusb/: core.c  descriptor.c  hotplug.c  hotplug.h  io.c  libusb.h  libusbi.h  strerror.c  sync.c  version.h  version_nano.h
libs/libusb/msvc/: config.h
libs/libusb/os/: poll_windows.c  poll_windows.h  threads_windows.c  threads_windows.h  windows_common.h  windows_nt_common.c  windows_nt_common.h  windows_winusb.c  windows_winusb.h
libs/lz4lib/: lz4.c  lz4.h
src/: CMakeLists.txt  GNUmakefile  Makefile  build.sh
src/Leddar/: LdBitFieldProperty.cpp  LdBitFieldProperty.h  LdBoolProperty.cpp  LdBoolProperty.h  LdBufferProperty.cpp  LdBufferProperty.h  LdCanKomodo.cpp  LdCanKomodo.h  LdCarrierEnhancedModbus.cpp  LdCarrierEnhancedModbus.h  LdConnection.cpp  LdConnection.h  LdConnectionDefines.h  LdConnectionFactory.cpp  LdConnectionFactory.h  LdConnectionInfo.cpp  LdConnectionInfo.h  LdConnectionInfoCan.h  LdConnectionInfoEthernet.h  LdConnectionInfoModbus.h  LdConnectionInfoSpi.h  LdConnectionInfoUsb.h  LdConnectionModbusStructures.h  LdConnectionUniversal.cpp  LdConnectionUniversal.h  LdConnectionUniversalCan.cpp  LdConnectionUniversalCan.h  LdConnectionUniversalDefines.h  LdConnectionUniversalModbus.cpp  LdConnectionUniversalModbus.h  LdConnectionUniversalSpi.cpp  LdConnectionUniversalSpi.h  LdDefines.h  LdDetectionPacket.h  LdDetectionPacketReceiver.h  LdDevice.cpp  LdDevice.h  LdDeviceFactory.cpp  LdDeviceFactory.h  LdDoubleBuffer.cpp  (+97 more)
src/Leddar/M16_FPGA/: M16_FPGA_SSPIEm.cpp  M16_FPGA_SSPIEm.h  M16_FPGA_core.cpp  M16_FPGA_core.h  M16_FPGA_debug.h  M16_FPGA_hardware.cpp  M16_FPGA_hardware.h  M16_FPGA_intrface.cpp  M16_FPGA_intrface.h  M16_FPGA_opcode.h  M16_FPGA_util.cpp  M16_FPGA_util.h
src/LeddarConfigurator4/: LeddarConfigurator4.sln  LeddarConfigurator4.vcxproj  LeddarConfigurator4.vcxproj.filters
src/LeddarExample/: LeddarExample.cpp  LeddarExample.vcxproj  LeddarExample.vcxproj.filters
src/LeddarPy/: .gitignore  Connecters.cpp  Connecters.h  LeddarPy.cpp  LeddarPy.h  LeddarPy.sln  LeddarPy.vcxproj  LeddarPy.vcxproj.filters  LeddarPyAdvancedExample.py  LeddarPyDevice.cpp  LeddarPyDevice.h  LeddarPyExample.py  LeddarPyExample.pyproj  PythonHelper.h  README.md  setup.py
src/LeddarTech/: LtCRCUtils.cpp  LtCRCUtils.h  LtDefines.h  LtExceptions.h  LtFileUtils.cpp  LtFileUtils.h  LtIntUtilities.h  LtIntelHex.cpp  LtIntelHex.h  LtKeyboardUtils.cpp  LtKeyboardUtils.h  LtMathUtils.cpp  LtMathUtils.h  LtScope.h  LtStringUtils.cpp  LtStringUtils.h  LtSystemUtils.cpp  LtSystemUtils.h  LtTimeUtils.cpp  LtTimeUtils.h
src/Leddar_ROS/: CMakeLists.txt  README.md  package.xml
src/Leddar_ROS/config/: device.xml
src/Leddar_ROS/launch/: example.launch  imu.launch
src/Leddar_ROS/msg/: Specs.msg
src/Leddar_ROS/rviz/: example.rviz  imu.rviz
src/Leddar_ROS/scripts/: device.py
src/Py_leddar_utils/: .gitignore  README.md  setup.cfg  setup.py  versioneer.py
src/Py_leddar_utils/leddar_utils/: .gitignore  __init__.py  clouds.py
src/shared/comm/: LtComEthernetPublic.h  LtComLeddarEngine.h  LtComLeddarTechPublic.h  LtComUSBPublic.h  PlatformLC08l32DefinitionsShared.h  PlatformLC16il32DefinitionsShared.h  PlatformM7DefinitionsShared.h  registerMap.h  registerMapLC16IL.h  registerMapLC8L.h  registerMapProduct.h
src/shared/comm/Canbus/: LtComCanbus.h  LtComM16Canbus.h  LtComVuCanbus.h
src/shared/comm/Legacy/DTec/: LtComDTec.h
src/shared/comm/Legacy/M16/: LtComM16.h
src/shared/comm/Modbus/: LtComLeddarM16Modbus.h  LtComLeddarOneModbus.h  LtComLeddarVu8Modbus.h  LtComModbus.h
